// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImageGallery stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-4"
  >
    <div
      class="aspect-square overflow-hidden rounded-lg bg-muted"
    >
      <div
        class="w-full h-full object-cover object-center [&_img]:object-contain! [&_img]:h-full! [&_img]:max-w-full! [&_img]:mx-auto!"
      >
        <picture>
          <source
            media="(min-width: 640px)"
            sizes="680px"
            srcset="https://zzrf-001.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwbeefee44/images/large/P0048_001.webp?sw=680&q=70&sfrm=jpg 680w, https://zzrf-001.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwbeefee44/images/large/P0048_001.webp?sw=1360&q=70&sfrm=jpg 1360w"
            type="image/webp"
          />
          <source
            sizes="100vw"
            srcset="https://zzrf-001.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwbeefee44/images/large/P0048_001.webp?sw=640&q=70&sfrm=jpg 640w, https://zzrf-001.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwbeefee44/images/large/P0048_001.webp?sw=1280&q=70&sfrm=jpg 1280w"
            type="image/webp"
          />
          <img
            alt="Laptop Briefcase with wheels (37L), , large"
            fetchpriority="auto"
            loading="lazy"
            src="https://zzrf-001.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwbeefee44/images/large/P0048_001.jpg"
          />
        </picture>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageGallery stories snapshot > EagerLoading story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-4"
  >
    <div
      class="aspect-square overflow-hidden rounded-lg bg-muted"
    >
      <div
        class="w-full h-full object-cover object-center [&_img]:object-contain! [&_img]:h-full! [&_img]:max-w-full! [&_img]:mx-auto!"
      >
        <picture>
          <source
            media="(min-width: 640px)"
            sizes="680px"
            srcset="https://zzrf-001.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwbeefee44/images/large/P0048_001.webp?sw=680&q=70&sfrm=jpg 680w, https://zzrf-001.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwbeefee44/images/large/P0048_001.webp?sw=1360&q=70&sfrm=jpg 1360w"
            type="image/webp"
          />
          <source
            sizes="100vw"
            srcset="https://zzrf-001.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwbeefee44/images/large/P0048_001.webp?sw=640&q=70&sfrm=jpg 640w, https://zzrf-001.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwbeefee44/images/large/P0048_001.webp?sw=1280&q=70&sfrm=jpg 1280w"
            type="image/webp"
          />
          <img
            alt="Laptop Briefcase with wheels (37L), , large"
            fetchpriority="high"
            loading="eager"
            src="https://zzrf-001.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwbeefee44/images/large/P0048_001.jpg"
          />
        </picture>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageGallery stories snapshot > Empty story renders and matches snapshot 1`] = `
<div>
  <div
    class="aspect-square bg-muted rounded-lg flex items-center justify-center"
  >
    <div
      class="text-center text-muted-foreground"
    >
      <div
        class="text-4xl mb-2"
      >
        📷
      </div>
      <p>
        No image available
      </p>
    </div>
  </div>
</div>
`;

exports[`ImageGallery stories snapshot > SingleImage story renders and matches snapshot 1`] = `
<div>
  <div
    class="space-y-4"
  >
    <div
      class="aspect-square overflow-hidden rounded-lg bg-muted"
    >
      <div
        class="w-full h-full object-cover object-center [&_img]:object-contain! [&_img]:h-full! [&_img]:max-w-full! [&_img]:mx-auto!"
      >
        <picture>
          <source
            media="(min-width: 640px)"
            sizes="680px"
            srcset="https://zzrf-001.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwbeefee44/images/large/P0048_001.webp?sw=680&q=70&sfrm=jpg 680w, https://zzrf-001.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwbeefee44/images/large/P0048_001.webp?sw=1360&q=70&sfrm=jpg 1360w"
            type="image/webp"
          />
          <source
            sizes="100vw"
            srcset="https://zzrf-001.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwbeefee44/images/large/P0048_001.webp?sw=640&q=70&sfrm=jpg 640w, https://zzrf-001.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwbeefee44/images/large/P0048_001.webp?sw=1280&q=70&sfrm=jpg 1280w"
            type="image/webp"
          />
          <img
            alt="Laptop Briefcase with wheels (37L), , large"
            fetchpriority="auto"
            loading="lazy"
            src="https://zzrf-001.dx.commercecloud.salesforce.com/on/demandware.static/-/Sites-apparel-m-catalog/default/dwbeefee44/images/large/P0048_001.jpg"
          />
        </picture>
      </div>
    </div>
  </div>
</div>
`;
